# tfg_project_portal

./: .env  .gitignore  LICENSE  load_data.py  pyproject.toml  setup.py
app/: main.py
app/agents/: sql_agent.py
app/core/: config.py
app/routers/: chat.py
app/services/: database.py
backend/: debug_rag.py  pyproject.toml
backend/app/: main.py
backend/app/agents/: chat_agent.py  query_router.py  router_agent.py  sql_agent.py  sql_converter.py
backend/app/agents/sql/: result_formatter.py  sql_executor.py  sql_generator.py  table_selector.py
backend/app/core/: config.py
backend/app/pipelines/: query_router.py  rag_pipeline.py  sql_converter.py
backend/app/pipelines/sql/: result_formatter.py  schema.py  sql_executor.py  sql_generator.py  table_selector.py
backend/app/routers/: chat.py  data.py  stats.py  storage.py
backend/app/services/: database.py  storage.py
backend/app/utils/: embeddings.py  ollama_client.py
backend/sql/: setup_pgvector.sql
backend/tests/: eval_rag.py  eval_text2sql.py
backend/tests/results/: eval_rag_resum.md  eval_text2sql_resum.md
data/: Fets_coneguts_al_transport_públic_20251124.csv  Fets_coneguts_als_aeroports_20251124.csv  Fets_delictius_i_infraccions_administratives_de_l'àmbit_de_l'odi_i_discriminació_20251124.csv
docs/design-system/: claude_code_prompt_guide.md  project_style_guide.md  quick_reference_prompts.md
frontend/: global.d.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/hooks/: use-toast.ts
frontend/lib/: api.ts
(+26 files in other folders)
