[project]
name = "tfg-project-portal"
version = "0.1.0"
description = ""
authors = [
    {name = "Jordipifarre",email = "jordi.pifarre.ribes@gmail.com"}
]
package-mode = false
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "supabase (>=2.27.2,<3.0.0)",
    "langchain (>=1.2.7,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langgraph (>=1.0.7,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "pypdf (>=5.0.0,<6.0.0)",
    "fastembed (>=0.4.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
